[package]
name = "kpacubo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "kpacubo-desktop"
path = "src/desktop_main.rs"

# Opinionated, aimed mostly at 2D games

# Audio formats should be enabled only in bevy_kira_audio
[dependencies.bevy]
version = "0.7"
default-features = false
features = [
    "render",
    "bevy_winit",
    "png",
    "x11",
    "filesystem_watcher",
]

# Apparently this is better than built-in Bevy audio system
[dependencies.bevy_kira_audio]
version = "0.10"
default-features = false
features = ["ogg", "wav"]

[dependencies]
# Utilities
wasm-bindgen = "0.2"
rand = "0.8"

# Native dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# (empty)

# Wasm dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Dump panics into browser console
console_error_panic_hook = "0.1"
# Used for resizing the canvas to fit the window
web-sys = { version = "0.3", features = ["Window"] }
gloo-events = "0.1"

[profile.dev.package."*"]
# Compile all dependencies as release for extra fast
opt-level=3

[profile.release]
lto = "thin"
