[package]
name = "one-clicker"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/game.rs"

[[bin]]
name = "one_clicker-windows"
path = "src/desktop_main.rs"

# Audio formats should be enabled only in bevy_kira_audio
[dependencies.bevy]
version = "0.9"
default-features = false
features = [
    "render",
    "bevy_winit",
    "png",
    "x11",
    "filesystem_watcher",
]

# Apparently this is better than built-in Bevy audio system
[dependencies.bevy_kira_audio]
version = "0.13"
default-features = false
features = ["ogg", "wav"]

[dependencies]
rand = "0.8"
bevy_tweening = "0.6"
bevy_ninepatch = "0.9"
iyes_loopless = "0.9"
bevy_embedded_assets = "0.6"
bevy_asset_loader = { version = "0.14", features = ["stageless"] }

# Native dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy-inspector-egui = "0.16"

# Wasm dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Dump panics into browser console
console_error_panic_hook = "0.1"
# Used for resizing the canvas to fit the window
web-sys = { version = "0.3", features = ["Window"] }
gloo-events = "0.1"
wasm-bindgen = "0.2"

[profile.dev.package."*"]
# Compile all dependencies as release for extra fast
opt-level=3

[profile.release]
lto = "thin"
